# idf_hals

./: CMakeLists.txt  README.md
include/: hal_adc_calibration.hpp  hal_adc_oneshot.hpp  hal_freertos.hpp  hal_gpio.hpp  hal_nvs.hpp  hal_sleep.hpp  hal_sys_rom.hpp  hal_system.hpp  hal_timer.hpp
include/interfaces/: i_hal_adc_calibration.hpp  i_hal_adc_oneshot.hpp  i_hal_freertos.hpp  i_hal_gpio.hpp  i_hal_nvs.hpp  i_hal_sleep.hpp  i_hal_sys_rom.hpp  i_hal_system.hpp  i_hal_timer.hpp
mocks/: mock_hal_adc_calibration.hpp  mock_hal_adc_oneshot.hpp  mock_hal_freertos.hpp  mock_hal_gpio.hpp  mock_hal_nvs.hpp  mock_hal_sleep.hpp  mock_hal_sys_rom.hpp  mock_hal_system.hpp  mock_hal_timer.hpp
src/: hal_adc_calibration.cpp  hal_adc_oneshot.cpp  hal_freertos.cpp  hal_gpio.cpp  hal_nvs.cpp  hal_sleep.cpp  hal_sys_rom.cpp  hal_system.cpp  hal_timer.cpp
