if(IDF_TARGET STREQUAL "linux")
    idf_component_register(
        SRCS
            "src/hal_gpio.cpp"
            "src/hal_timer.cpp"
            "src/hal_sys_rom.cpp"
        INCLUDE_DIRS
            "include"
            "include/interfaces"
        REQUIRES
            esp_timer
            driver
    )
else()
    idf_component_register(
        SRCS
            "src/hal_gpio.cpp"
            "src/hal_timer.cpp"
            "src/hal_sys_rom.cpp"
            "src/hal_adc_calibration.cpp"
            "src/hal_adc_oneshot.cpp"
        INCLUDE_DIRS
            "include"
            "include/interfaces"
        REQUIRES
            esp_timer
            driver
            esp_adc
    )
endif()
